fix header links wrap and call to action button

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ header>h1{
     font-size: 24px;
     font-weight: 900;
     color: #F9FAF8;
+    flex-shrink: 0;
 }
 
 .header-container{
@@ -39,13 +40,16 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 25px;
 }
 
 .links > ul{
     display: flex;
+    justify-content: flex-end;
     gap: 15px;
     padding: 0;
     margin: 0;
+    flex-wrap: wrap;
 }
 
 .links>ul>li>a{
@@ -256,10 +260,10 @@ p.call{
     justify-content: center;
     align-items: center;
     margin: 0;
-    width: 100px;
-    height: 28px;
     color: #E5E7EB;
     font-weight: 800;
+    padding: 5px 20px;
+    margin: 25px;
 }
 
 .call-to-action>button:hover{
